final adjustments order ui

--- a/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/manually-create-orders.adoc
@@ -272,7 +272,7 @@ Nach dem Speichern wird die neue Lieferadresse in den entsprechenden Kontaktdate
 |Gib den Nachname des Kontakts ein. Das ist ein Pflichtfeld, wenn unter *Firma* und *Vorname* kein Eintrag gemacht wird.
 
 |*Zusatz (Name 4)*
-|Gib optional Zusatzangaben zum Kontakt einn, wie z.B. z. Hd. Herrn Max Mustermann.
+|Gib optional Zusatzangaben zum Kontakt ein, wie z.B. z. Hd. Herrn Max Mustermann.
 
 |*Adresse 1 (Straße)* +
 *Adresse 2 (Hausnummer)*
@@ -288,12 +288,12 @@ Nach dem Speichern wird die neue Lieferadresse in den entsprechenden Kontaktdate
 |*Postleitzahl* +
 *Ort*
 |Gib die Postleitzahl und den Ort des Kontakts ein. *Ort* ist ein Pflichtfeld. +
-Bei bestimmten Ländern, z.B. Vereinigtes Königreich, wird die Reihenfolge der Optionen Postleitzahl und Ort getauscht.
+Bei bestimmten Ländern, z.B. Vereinigtes Königreich, wird die Reihenfolge der Optionen *Postleitzahl* und *Ort* getauscht.
 
 |*Land* +
 *Region/Bezirk*
 |Wähle Werte aus den Dropdown-Listen. +
-*_Hinweis:_* Die Dropdown-Liste Region/Bezirk ist nicht für alle Länder verfügbar.
+*_Hinweis:_* Die Dropdown-Liste *Region/Bezirk* ist nicht für alle Länder verfügbar.
 
 |*E-Mail*
 |Gib optional eine E-Mail-Adresse ein.
@@ -376,7 +376,7 @@ Wenn du die Tabelle einmal angepasst hast, wird diese Auswahl gespeichert. Die T
 Diese Spalte ist eine Standardspalte.
 
 |*Status*
-|In dieser Spalte wird angezeigt, ob diese Variante im Webshop aktiv oder inaktiv ist. Informationen zur Aktivierung oder Deaktivierung einer Variante findest du auf der Handbuchseite xref:artikel:checkliste-artikel-anzeige.adoc#100[Hast du die Variante aktiviert?] +
+|In dieser Spalte wird angezeigt, ob diese Variante im Webshop aktiv oder inaktiv ist. Informationen zur Aktivierung oder Deaktivierung einer Variante findest du auf der Handbuchseite xref:artikel:checkliste-artikel-anzeige.adoc#100[Hast du die Variante aktiviert?]. +
 Diese Spalte ist eine Standardspalte.
 
 |*Artikel-ID*
@@ -412,12 +412,12 @@ Diese Spalte ist eine Standardspalte.
 Diese Spalte ist keine Standardspalte.
 
 |*Menge*
-|Gib die Menge ein, in der der Artikel dem Warenkorb hinzugefügt werden soll. Du kannst nur ganze Zahlen eingeben. Negative Mengen oder Mengen, die den Nettobestand übersteigen, sind nicht erlaubt. In diesem Fall wird eine Fehlermeldung angezeigt. Wenn die hinzugefügte Menge den Nettobestand auf = oder niedriger setzt, wird der Statusbalken für die Bestandsanzeige auf rot gesetzt. +
+|Gib die Menge ein, in der der Artikel dem Warenkorb hinzugefügt werden soll. Du kannst nur ganze Zahlen eingeben. Negative Mengen oder Mengen, die den Nettobestand übersteigen, sind nicht erlaubt. In diesem Fall wird eine Fehlermeldung angezeigt. Wenn die hinzugefügte Menge den Nettobestand auf 0 oder niedriger setzt, wird der Statusbalken für die Bestandsanzeige auf rot gesetzt. +
 Bei Mengenänderungen ändert sich der Verkaufspreis, daher muss der Verkaufspreis aktualisiert werden. Klicke dafür auf *Verkaufspreis aktualisieren* (material:refresh[]). Nach der Aktualisierung ist die Warenkorb-Schaltfläche (material:add_shopping_cart[]) wieder verfügbar und die Artikel können hinzugefügt werden. +
 Dies ist eine Standardspalte.
 
 |*Verkaufspreis*
-|Der aus der xref:auftraege:auftraege-verwalten.adoc#intable-item-search-price-selection[Preisauswahl] gewählte Verkaufspreis für diesen Artikel wird angezeigt. +
+|Der aus der <<#intable-item-search-price-selection, Preisauswahl>> gewählte Verkaufspreis für diesen Artikel wird angezeigt. +
 Dies ist eine Standardspalte.
 
 |[#intable-item-search-price-selection]*Preisauswahl*
@@ -474,7 +474,7 @@ Folgendes gilt für die Verkaufspreise:
 
 Zudem können Auftragspositionen im Warenkorb auch gelöscht werden. Klicke dafür auf *Löschen* (material:delete[]). Eine weitere Bearbeitungsmöglichkeit der Auftragspositionen im Warenkorb stellen die Eigenschaften dar. Beachte dafür das folgende Kapitel <<#order-item-properties, Eigenschaften von Auftragspositionen>>.
 
-Nachdem du alle gewünschten Artikel im Warenkorb abschließend bearbeitet hast, klicke auf *Übersicht*, um zum dritten und letzten Schritt zu gelangen. Du könntest auch zu den Auftragsdetails zurückkehren, indem du auf *Auftragsdetails* klickst. Artikel im Warenkorb werden gespeichert, wenn du vor oder zurück gehst.
+Nachdem du alle gewünschten Artikel im Warenkorb abschließend bearbeitet hast, klicke auf *Übersicht*, um zum dritten und letzten Schritt zu gelangen. Du kannst auch zu den Auftragsdetails zurückkehren, indem du auf *Auftragsdetails* klickst. Artikel im Warenkorb werden gespeichert, wenn du vor oder zurück gehst.
 
 [.collapseBox]
 .*Warenkorbtabelle individualisieren*
@@ -554,14 +554,14 @@ Zudem hast du in diesem Fenster einige weitere Bearbeitungsmöglichkeiten. Durch
 Du kannst weitere bereits angelegte Eigenschaften hinzufügen. Wähle eine Eigenschaft aus der Dropdown-Liste des Feldes *Eigenschaft wählen* aus und füge sie durch Klicken auf *Eigenschaft hinzufügen* (icon:plus-square[role="green"]) zu dieser Auftragsposition hinzu. +
 Hast du alle erforderlichen Anpassungen vorgenommen, klicke auf *Eigenschaften speichern*. Klickst du auf *Verwerfen*, wird keine der vorgenommenen Änderungen übernommen. Das Bearbeitungsfenster wird geschlossen und du kannst nach Bedarf die Eigenschaften weiterer Auftragspositionen auf die gleiche Weise bearbeiten.
 
-Wenn du die Eigenschaften auf Dokumenten ausgeben lassen möchtest, musst du dies in der Konfiguration der Eigenschaften einstellen. Stelle sicher, dass im Bereich xref:artikel:eigenschaften.adoc#property-visibilities[Sichtbarkeiten]
+Wenn du die Eigenschaften auf Dokumenten ausgeben lassen möchtest, musst du dies in der Konfiguration der Eigenschaften einstellen. Stelle sicher, dass im Bereich xref:artikel:eigenschaften.adoc#property-visibilities[Sichtbarkeiten] die folgenden Optionen gewählt sind:
 
 * aus der Dropdown-Liste *Überall anzeigen* die Option *Anzeige auf PDF-Dokumenten* sowie
-* aus der Dropdown-Liste *Mandant* die richtigen Mandanten ausgewählt sind.
+* aus der Dropdown-Liste *Mandant* die richtigen Mandanten.
 
 Wo die Eigenschaften auf dem Dokument ausgegeben werden, hängt von der jeweiligen Eigenschaft und ihrer Konfiguration ab. Eigenschaften, die in der Konfiguration im Bereich *Optionen* keinen Steuersatz zugewiesen bekommen haben oder für die aus der Dropdown-Liste *Bestelleigenschaft* die Option *zusätzliche Kosten anzeigen* ausgewählt ist, werden unter den Summen angezeigt. Andere Eigenschaften werden in der Artikelpositionstabelle angezeigt.
 
-Wenn du mit der Bearbeitung der Auftragseigenschaften und des Warenkorbs fertig bist, folgt der Schritt *Übersicht* in der Auftragsanlage. In diesem Schritt werden die Eigenschaften für Auftragspositionen nicht noch mal angezeigt. Stelle daher sicher, dass du alle Anpassungen vorgenommen hast, bevor du in der Erstellung des Auftrags weitergehst.
+Wenn du mit der Bearbeitung der Auftragseigenschaften und des Warenkorbs fertig bist, folgt der Schritt *Übersicht* in der Auftragsanlage. In diesem Schritt werden die Eigenschaften für Auftragspositionen nicht noch einmal angezeigt. Stelle daher sicher, dass du alle Anpassungen vorgenommen hast, bevor du in der Erstellung des Auftrags weitergehst.
 
 [#complete-order]
 === Übersicht: Auftrag abschließen
@@ -661,7 +661,7 @@ Auftragsvorlage erstellen:
 
 |*Artikel*
 |Hast du der Auftragsvorlage Artikel hinzugefügt, werden dir diese Artikel in der Tabelle angezeigt. Das Hinzufügen von Artikeln ist optional. Die hier angezeigten Artikel werden bei Anwendung der Auftragsvorlage zum Auftrag hinzugefügt. Du siehst zudem pro Artikel die Menge und den Artikeltext. Außerdem kannst du in der Tabelle Artikel aus der Auftragsvorlage löschen. +
-*_Beachte_*, dass bei Anwendung einer Auftragsvorlage mit Artikeln dem Auftrag noch keine Artikel hinzugefügt sein sollten. Bereits vorher vorhandene Artikel werden überschrieben. Du kannst aber nach Anwendung der Auftragsvorlage weitere Artikel zum Auftrag hinzufügen.
+*_Beachte:_* Bei Anwendung einer Auftragsvorlage mit Artikeln sollten dem Auftrag noch keine Artikel hinzugefügt worden sein. Bereits vorher vorhandene Artikel werden überschrieben. Du kannst aber nach Anwendung der Auftragsvorlage weitere Artikel zum Auftrag hinzufügen.
 
 |*Artikel hinzufügen*
 |In diesem Tab kannst du optional Artikel zur Auftragsvorlage hinzufügen. Diese Artikel werden dann bei Anwendung der Auftragsvorlage zum Auftrag hinzugefügt. +
