--- a/docs/de-de/modules/auftraege/pages/order-search.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-search.adoc
@@ -24,6 +24,14 @@ Klicke dann auf icon:search[role="darkGrey"], um die Suche auszuführen.
 
 Im Bearbeitungsmodus (icon:design_inline_edit[set=plenty]) der Auftrags-Übersicht unter *Einstellungen » Filter-Einstellungen* werden dir die Filter in den Spalten *Verfügbare Filter* und *Angezeigte Filter* angezeigt. Entscheide selbst, welche Filter für die Auftragssuche sichtbar sein sollen.
 
+// umbenennen in "Spaltenanzahl für Filter"
+
+[TIP]
+.Anordnung der Filter anpassen
+======
+Stelle im Bearbeitungsmodus anhand der Einstellung *Filter pro Zeile* selbst ein, in wie vielen Spalten deine Filter in der Suche angezeigt werden sollen.
+======
+
 [[table-available-filters]]
 .Verfügbare und angezeigte Filter in der Auftragssuche
 [cols="1,3"]
