--- a/docs/de-de/modules/auftraege/pages/order-type-credit-note.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-credit-note.adoc
@@ -115,9 +115,11 @@ Dokument *Gutschrift* erstellen:
 
 . Öffne das Menü *Aufträge » Aufträge (Testphase)*.
 . Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
-. Öffne den Gutschriftauftrag, für den das Dokument *Gutschrift* erzeugt werden soll.
+. Klicke rechts in der Zeile der Gutschrift auf das Kontextmenü (material:more_vert[]).
+. Wähle *Dokument erstellen* > *Gutschrift*. +
+icon:map-signs[] *_Oder:_* Öffne den Gutschriftauftrag, für den du das Dokument *Gutschrift* erstellen möchtest.
 . Gehe in den Bereich *Dokumente*.
-. Klicke rechts auf *Dokument erstellen* (material:note_add[]).
+. Klicke auf *Dokument erstellen* (material:add[]).
 . Wähle die Option *Gutschrift*. +
 → Das Fenster zum Erstellen des Dokuments wird geöffnet.
 . Nimm bei Bedarf Einstellungen vor.
@@ -139,24 +141,24 @@ Das Stornieren eines Gutschriftdokuments dient der nachvollziehbaren Korrektur v
 
 Gehe zur Korrektur eines Gutschriftauftrags und der Erstellung eines *Stornobelegs Gutschrift* wie im Folgenden beschrieben vor.
 
-// adjust note_add icon to add once the changes are merged
-
 [.instruction]
 Gutschriftauftrag korrigieren:
 
 . Öffne das Menü *Aufträge » Aufträge (Testphase)*.
 . Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
-. Öffne den Gutschriftauftrag, in dem du das Gutschriftdokument stornieren möchtest.
-. Klicke im Bereich *Dokumente* auf *Dokument erstellen* (material:note_add[]).
+. Klicke rechts in der Zeile der Gutschrift auf das Kontextmenü (material:more_vert[]).
+. Wähle *Dokument erstellen* > *Stornobeleg Gutschrift*. +
+icon:map-signs[] *_Oder:_* Öffne den Gutschriftauftrag, für den du den *Stornobeleg Gutschrift* erstellen möchtest.
+. Klicke im Bereich *Dokumente* auf *Dokument erstellen* (material:add[]).
 . Wähle die Option *Stornobeleg Gutschrift*. +
 *_Hinweis:_* Diese Option ist nur verfügbar, wenn bereits ein Gutschriftdokument erstellt wurde.
 . Nimm bei Bedarf Einstellungen vor.
 . Klicke anschließend auf *Ausführen*. +
 → Der Stornobeleg wird erzeugt.
-. Klicke anschließend erneut auf *Dokument erstellen* (material:note_add[]).
+. Klicke anschließend erneut auf *Dokument erstellen* (material:add[]).
 . Wähle die Option *Gutschrift*, um ein neues Gutschriftdokument zu erstellen.
 . Nimm bei Bedarf Einstellungen vor.
-. Klicke anschließend auf *Ausführen* +
+. Klicke anschließend auf *Ausführen*. +
 → Das neue Gutschriftdokument wird erzeugt.
 
 [#booking-refunds]
