--- a/docs/de-de/modules/auftraege/pages/order-type-offer.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-offer.adoc
@@ -17,14 +17,16 @@ Weitere Informationen und Anleitungen zur Einrichtung der Dokumentenvorlage find
 Angebote erstellst du individuell für Kund:innen, daher sind auch die dazugehörigen Dokumente direkt mit diesem Auftrag vom Typ *Angebot* verknüpft. Das bedeutet, dass das Dokument nur für den Auftragstyp *Angebot* erstellt werden kann. Möchtest du also z.B. ein PDF-Dokument *Angebot* verschicken, dann lege zunächst das Angebot als Auftragstyp an. Das dazugehörige Dokument legst du manuell wie im Folgenden beschrieben an.
 
 [.instruction]
-Dokument Angebot manuell erzeugen:
+Dokument *Angebot* manuell erzeugen:
 
 . Öffne das Menü *Aufträge » Aufträge (Testphase)*. +
-. Suche (material:search[]) anhand der Filtereinstellungen das Angebot, für das das Dokument erzeugt werden soll.
-. Öffne das gewünschte Angebot.
+. Suche (material:search[]) anhand der Filtereinstellungen das Angebot, für das das Dokument *Angebot* erzeugt werden soll.
+. Klicke rechts in der Zeile des Angebots auf das Kontextmenü (material:more_vert[]).
+. Wähle *Dokument erstellen* > *Angebot*. +
+icon:map-signs[] *_Oder:_* Öffne das Angebot, für das ein Dokument *Angebot* erzeugt werden soll.
 . Gehe in den Bereich *Dokumente*.
-. Klicke rechts auf *Dokument erstellen* (material:note_add[]).
-. Wähle die Option *Angebot*.
+. Klicke auf *Dokument erstellen* (material:add[]).
+. Wähle die Option *Angebot*. +
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-generate-offer-document>>.
 . Klicke auf *Ausführen*, um das Dokument *Angebot* zu erzeugen.
 
