--- a/docs/de-de/modules/auftraege/pages/order-type-return.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-return.adoc
@@ -157,9 +157,11 @@ Rücksendeschein manuell erstellen:
 . Öffne das Menü *Aufträge » Aufträge (Testphase)*.
 . Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
 . Klicke rechts in der Zeile der Retoure auf das Kontextmenü (material:more_vert[]).
-. Wähle *Dokument erstellen* > *Rücksendeschein*.
+. Wähle *Dokument erstellen* > *Rücksendeschein*. +
 icon:map-signs[] *_Oder:_* Öffne die Retoure, für die du einen Rücksendeschein erstellen möchtest.
-. Wähle im Bereich *Dokumente* die Option *Dokument erstellen* > *Rücksendeschein*.
+. Gehe in den Bereich *Dokumente*.
+. Klicke auf *Dokument erstellen* (material:add[]).
+. Wähle die Option *Rücksendeschein*.
 . Nimm die Einstellungen für den Rücksendeschein vor. Beachte dazu die Erläuterungen in <<table-generate-return-slip>>.
 . Klicke anschließend auf *Ausführen*, um den Rücksendeschein zu erstellen.
 
