--- a/docs/de-de/modules/auftraege/pages/order-type-warranty.adoc
+++ b/docs/de-de/modules/auftraege/pages/order-type-warranty.adoc
@@ -139,9 +139,11 @@ Gewährleistung durch Umtausch abschließen:
 
 . Öffne das Menü *Aufträge » Aufträge (Testphase)*.
 . Führe die Suche (material:search[]) aus, um Aufträge anzuzeigen.
-. Öffne die Gewährleistung, die du abschließen möchtest.
+. Klicke rechts in der Zeile der Gewährleistung auf das Kontextmenü (material:more_vert[]).
+. Wähle *Dokument erstellen* > *Rechnung*. +
+icon:map-signs[] *_Oder:_* Öffne die Gewährleistung, die du abschließen möchtest.
 . Gehe in den Bereich *Dokumente*.
-. Klicke rechts auf *Dokument erstellen* (material:note_add[]).
+. Klicke auf *Dokument erstellen* (material:add[]).
 . Wähle die Option *Rechnung*. +
 → Das Fenster zum Erstellen der Rechnung wird geöffnet.
 . Nimm bei Bedarf Einstellungen vor.
