--- a/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
+++ b/docs/de-de/modules/auftraege/pages/working-with-orders.adoc
@@ -20,7 +20,7 @@ Passe die xref:auftraege:preparatory-settings.adoc#[Grundeinstellungen] im Menü
 
 Nutze die Gruppenfunktionen, um für mehrere Aufträge gleichzeitig eine Aktion auszuführen. Für Aufträge stehen dir die folgenden Gruppenfunktionen zur Verfügung.
 
-//icons hinzufügen
+//icons hinzufügen [cols="2,1,6a"]
 
 [[table-order-group-functions]]
 .Gruppenfunktionen für Aufträge
@@ -198,13 +198,7 @@ Wähle bei Bedarf einen anderen Auftragsstatus aus der Dropdown-Liste. +
 
 | *Tags*
 a|Zeigt die gewählten Tags. +
-Die folgenden Tags stehen in der Dropdown-Liste zur Verfügung: +
-
-* Auftrags-Tag
-* Lieferdatum: gesetzt
-* Status: geliefert
-* Status: offen
-* Zahlung: bezahlt
+In der Dropdown-Liste werden alle von dir erstellten Tags angezeigt.
 
 |===
 
@@ -623,7 +617,7 @@ Im Bereich *Zahlungsbedingungen* siehst du die Informationen *Zahlungsziel*, *Sk
 Möchtest du Valuta und Skonto nutzen, muss ein Zahlungsziel angegeben sein. Wenn für das Zahlungsziel nichts bzw. der Wert 0 eingetragen ist, sind die Zahlungsbedingungen nicht gültig und werden nicht auf Dokumente übernommen.
 ======
 
-Wenn die Werte bereits in den xref:crm:kontakte-verwalten.adoc#300[Kundendaten] hinterlegt sind, werden sie vom System automatisch übernommen und hier eingetragen. Die Kundendaten haben somit Priorität. Ist in den Kundendaten nichts hinterlegt, wird als nächstes überprüft, ob die Zahlungsbedingungen in einer xref:crm:kontakte-verwalten.adoc#15[Kundenklasse] definiert sind. Falls ja, werden diese Daten übernommen und hier am Auftrag eingetragen. Sind die Werte weder in den Kundendaten noch in einer Kundenklasse hinterlegt, bleiben die Felder zu den Zahlungsbedingungen am Auftrag leer. +
+Wenn die Werte bereits in den xref:crm:kontakte-verwalten.adoc#300[Kontaktdaten] hinterlegt sind, werden sie vom System automatisch übernommen und hier eingetragen. Die Kontaktdaten haben somit Priorität. Ist in den Kontaktdaten nichts hinterlegt, wird als nächstes überprüft, ob die Zahlungsbedingungen in einer xref:crm:kontakte-verwalten.adoc#15[Kundenklasse] definiert sind. Falls ja, werden diese Daten übernommen und hier am Auftrag eingetragen. Sind die Werte weder in den Kontaktdaten noch in einer Kundenklasse hinterlegt, bleiben die Felder zu den Zahlungsbedingungen am Auftrag leer. +
 Am Auftrag lassen sich die Zahlungsbedingungen manuell eintragen und verändern. Dies ist unabhängig davon, woher Werte übertragen wurden oder ob keine Werte übernommen wurden. +
 Auf Dokumenten werden die Werte übernommen, die am dazugehörigen Auftrag hinterlegt sind. Beachte dazu auch die xref:auftraege:auftragsdokumente.adoc#intable-zahlungsbedingungen-anzeigen[Dokumenteneinstellungen]. Die Zahlungsbedingungen werden auf den Auftragsdokumenten xref:auftraege:rechnungen-erzeugen.adoc#[Rechnung], xref:auftraege:proformarechnung-erzeugen.adoc#[Proformarechnung], xref:auftraege:auftragsbestaetigung-erzeugen.adoc#[Auftragsbestätigung] und xref:auftraege:dokument-angebot-erzeugen.adoc#[Angebot] ausgegeben. +
 *_Hinweis:_* Die Zahlungsbedingungen werden nur auf diese Dokumente übernommen, wenn es sich um einen Auftrag mit der xref:payment:kauf-auf-rechnung.adoc#[Zahlungsart Rechnung] oder der xref:payment:vorkasse.adoc#[Zahlungsart Vorkasse] handelt.
@@ -725,7 +719,7 @@ Im Bereich *Zugeordnete Zahlungen* siehst du alle Informationen zu den Zahlungen
 |Zeigt den offenen Betrag an.
 |===
 
-[[table-assigned-payments-availabe-columns]]
+[[table-assigned-payments-available-columns]]
 .Verfügbare Spalten für zugeordnete Zahlungen
 [cols="1,3"]
 |===
@@ -843,7 +837,7 @@ Im Bereich *Eigenschaften* siehst du Eigenschaften der Auftragspositionen. Über
 [#area-documents]
 === Bereich: Dokumente
 
-Im Bereich *Dokumente* siehst du alle vorhandenen sowie archivierten Dokumente deiner Aufträge. Du kannst die Spalten konfigurieren (material:settings[]), neue Dokumente erstellen (material:note_add[]) und externe Dokumente hochladen (material:file_upload[]).
+Im Bereich *Dokumente* siehst du alle vorhandenen sowie archivierten Dokumente deiner Aufträge. Du kannst die Spalten konfigurieren (material:settings[]), neue Dokumente erstellen (material:add[]) und externe Dokumente hochladen (material:file_upload[]).
 
 [[table-documents]]
 .Einstellungen im Bereich Dokumente
@@ -881,7 +875,7 @@ Im Bereich *Dokumente* siehst du alle vorhandenen sowie archivierten Dokumente d
 | *Anzeigedatum*
 |Zeigt das Datum an, das auf dem Dokument ausgewiesen wird.
 
-| *Kontextmenü* (material:more_vert)
+| *Kontextmenü* (material:more_vert[])
 |Über das Kontextmenü kannst du ein Dokument herunterladen (material:file_download[]).
 |===
 
