--- a/docs/de-de/modules/pos/pages/pos-einrichten.adoc
+++ b/docs/de-de/modules/pos/pages/pos-einrichten.adoc
@@ -286,7 +286,7 @@ Die Priorität der Favoriten legst du über die Pfeilsymbole des Tabs *Favoriten
 [.instruction]
 Reihenfolge der Favoriten ändern:
 
-. Öffne das Menü *Einrichtung » POS » Mandant » [Mandant wählen\] » [POS wählen\]*.
+. Öffne das Menü *Einrichtung » POS » [Mandant wählen\]*.
 . Öffne die Kasse.
 . Öffne das Tab *Favoriten*. +
 → Die Liste der Varianten auf der Favoritenliste wird angezeigt.
