--- a/docs/de-de/modules/pos/pages/pos-einrichten.adoc
+++ b/docs/de-de/modules/pos/pages/pos-einrichten.adoc
@@ -302,7 +302,7 @@ Die Favoritenliste einer Kasse kann auf andere Kassen des Mandanten übertragen 
 [.instruction]
 Favoriten auf andere Kassen übertragen:
 
-. Öffne das Menü *Einrichtung » POS » Mandant » [Mandant wählen\] » [POS wählen\]*.
+. Öffne das Menü *Einrichtung » POS » [Mandant wählen\]*.
 . Öffne die Kasse.
 . Öffne das Tab *Favoriten*. +
 → Die Liste der Varianten auf der Favoritenliste wird angezeigt.
