--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -349,6 +349,7 @@
 ** xref:webshop:ceres-einrichten.adoc[plentyShop LTS einrichten]
 ** xref:webshop:io-einrichten.adoc[IO einrichten]
 ** xref:webshop:shop-builder.adoc[ShopBuilder einrichten]
+** xref:webshop:faq-lts.adoc[FAQ: plentyShop LTS]
 ** xref:webshop:plentyshop-vorschau.adoc[plentyShop-Vorschau]
 ** xref:webshop:shopbuilder-content-widgets.adoc[ShopBuilder Content-Widgets]
 ** xref:webshop:feedbacks-verwalten.adoc[Feedbacks verwalten]
