--- a/docs/de-de/modules/ROOT/nav.adoc
+++ b/docs/de-de/modules/ROOT/nav.adoc
@@ -112,6 +112,7 @@
 ** xref:crm:faq.adoc[FAQ: CRM]
 ** xref:crm:praxisbeispiele.adoc[Praxisbeispiele]
 *** xref:crm:praxisbeispiel-tracking-url-senden.adoc[Tracking-URL an Kund:innen senden]
+*** xref:crm:praxisbeispiel-migration-vorlagen.adoc[EmailBuilder: Todo nach Migration der alten E-Mail-Vorlagen]
 ** xref:crm:kontakte-verwalten.adoc[Kontakte (altes Tool)]
 * xref:auftraege:auftraege.adoc[Aufträge]
 ** xref:auftraege:grundeinstellungen.adoc[Grundeinstellungen]
