--- a/docs/de-de/modules/maerkte/partials/mirakl-first-steps.adoc
+++ b/docs/de-de/modules/maerkte/partials/mirakl-first-steps.adoc
@@ -22,7 +22,7 @@ Um Artikeldaten zu {market} zu exportieren benötigst du die folgenden Plugins:
 :plugin: Mirakl Connector
 :priority: 0
 :main-client:
-:mirakl:
+:mirakl-priority:
 
 include::partial$plugin-installation.adoc[]
 :!plugin:
