--- a/docs/de-de/modules/maerkte/partials/plugin-installation.adoc
+++ b/docs/de-de/modules/maerkte/partials/plugin-installation.adoc
@@ -33,9 +33,9 @@ ifdef::main-client[*_Hinweis:_* Das Plugin-Set muss mit dem Standardmandanten ve
 ifdef::priority[]
 . Klicke im Menü links auf *Prioritäten festlegen*.
 . Setze die Priorität von *{plugin}* auf {priority}. +
-ifdef::mirakl[]
-*_Hinweis:_* Die Priorität des *Mirakl-Plugins* muss niedriger sein als die Priorität von *{plugin}*. So ist sichergestellt, dass beide Plugins fehlerfrei funktionieren.
-endif::mirakl[]
+ifdef::mirakl-priority[]
+*_Hinweis:_* Die Priorität von *Mirakl Connector* muss niedriger sein als die Priorität des Marktplatz-Plugins. So ist sichergestellt, dass beide Plugins fehlerfrei funktionieren.
+endif::mirakl-priority[]
 . Speichere (icon:save[role=green]) die Einstellung. +
 → Das Plugin-Set wird angezeigt.
 endif::priority[]
