--- a/docs/en-gb/modules/markets/partials/mirakl-first-steps.adoc
+++ b/docs/en-gb/modules/markets/partials/mirakl-first-steps.adoc
@@ -22,7 +22,7 @@ You need the following plugins to send item data to {market}:
 :plugin: Mirakl Connector
 :priority: 0
 :main-client:
-:mirakl:
+:mirakl-priority:
 
 include::partial$plugin-installation.adoc[]
 :!plugin:
